# focket-rs

./: Cargo.toml  README.md  llms.txt
src/: batch_flow.rs  core.rs  error.rs  flow.rs  fork_join.rs  hooks.rs  internal.rs  lib.rs  node.rs  subflow.rs  types.rs
tests/: edge_coverage.rs  flow.rs
