[package]
name = "focket-rs"
version = "0.1.1"
edition = "2024"
description = "A minimal node-graph / workflow orchestration engine for Rust."
license = "ISC"

[dependencies]
async-trait = "0.1"
futures = "0.3"
log = "0.4"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "time", "sync"] }
tokio-util = "0.7"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }
